--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
-# IPython
+# IPythonrtd-dbaF-env
 profile_default/
 ipython_config.py
 
@@ -154,3 +154,16 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,jupyternotebooks
+
+rtd-dbaF-env/
+docs/build/
+docs/source/_templates/
+docs/source/plot-argo-south-01-20230721.rst.master
+docs/source/conf2.py
+docs/requirements2.txt
+docs/source/api.rst
+docs/source/brief.rst
+docs/source/disclaimer.rst
+docs/source/distribution.rst
+docs/source/usage.rst
+
